create more forms and pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <!-- GrapesJS CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/grapesjs@0.21.8/dist/css/grapes.min.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/grapesjs@0.21.8/dist/css/grapes.min.css"> -->
+  <!-- more stable than unpkg -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/grapesjs@0.21.8/dist/css/grapes.min.css"> --> 
+   <!-- good for long term -->
+   <link rel="stylesheet" href="./libs/grapes.min.css">
+
+
   <!-- Custom styles -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -49,19 +55,20 @@
       <div id="layers-tab" class="tab-content"></div>
     </div>
 
-    <div id="gjs" style=" background: #fff; margin-top: 20px; overflow:auto; min-width: 0; height: calc(100vh - 20px); "></div>
+    <div id="gjs" style=" background: #fff; margin-top: 50px; overflow:auto; min-width: 0; height: calc(100vh - 50px); "></div>
     
     <div id="style-panel" style=" width: 250px; min-width:250px; flex-shrink:0; padding: 10px; overflow-y:auto; position:absolute; right: 0px;left:300;top:60px; height:100vh;">
     
     <div id="traits-container" style="width: 250px; min-width:250px; flex-shrink:0; padding: 10px; overflow-y:auto; position:absolute; right: 0px; top:calc(60px + 50%); height:50%;"></div>
 </div>
 
-  </div>
-
+ 
 
   <!-- Scripts -->
   <!-- <script src="https://unpkg.com/grapesjs@0.21.8/dist/grapes.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/grapesjs@0.21.8/dist/grapes.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/grapesjs@0.21.8/dist/grapes.min.js"></script> -->
+  <script src="./libs/grapes.min.js"></script>
+
 
   <script type="module" src="builder.js"></script>
   
