marketing funnel pages

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <li class="page-item" data-page="services">Services</li>
           <li class="page-item" data-page="pricing">Pricing</li>
           <li class="page-item" data-page="contact">Contact</li>
+          <li class="page-item" data-page="advertisement">Advertisement</li>
+          <li class="page-item" data-page="landing">Landing</li>
+          <li class="page-item" data-page="upsell">Upsell</li>
           <li class="page-item" data-page="thankyou">Thank you</li>
           <li class="page-item" data-page="error">404ERROR</li> 
 
