--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Top Toolbar -->
+    <!-- Top Toolbar -->
   <div id="top-panel" ></div>
 
   <!-- Main Layout -->
-  <div id="main" style="display: flex; height: 100vh; width: 100vw; overflow: hidden; position:relative;">
+<div id="main" style="display: flex; flex: 1; width: 100vw; overflow: hidden; position: relative;">
     <div id="left-panel" style=" width: 250px;
     min-width: 250px;
     flex-shrink: 0;">
-      <div id="left-tabs" style="margin-top:50px;">
+      <div id="left-tabs">
 
         <button data-tab="blocks" class="tab-btn active">Blocks</button>
         <button data-tab="pages" class="tab-btn">Pages</button>
@@ -55,14 +54,14 @@
       <div id="layers-tab" class="tab-content"></div>
     </div>
 
-    <div id="gjs" style=" background: #fff; margin-top: 50px; overflow:auto; min-width: 0; height: calc(100vh - 50px); "></div>
+    <div id="gjs" style=" background: #fff; overflow:auto; min-width: 0; "></div>
     
-    <div id="style-panel" style=" width: 250px; min-width:250px; flex-shrink:0; padding: 10px; overflow-y:auto; position:absolute; right: 0px;left:300;top:60px; height:100vh;">
+    <div id="style-panel" style=" width: 250px; min-width:250px; flex-shrink:0; padding: 10px; overflow-y:auto; position:absolute; right: 0px;left:300; height:100vh;">
     
-    <div id="traits-container" style="width: 250px; min-width:250px; flex-shrink:0; padding: 10px; overflow-y:auto; position:absolute; right: 0px; top:calc(60px + 50%); height:50%;"></div>
+    <div id="traits-container" style="width: 250px; min-width:250px; flex-shrink:0; padding: 10px; overflow-y:auto; position:absolute; right: 0px; height:50%;"></div>
+
 </div>
 
- 
 
   <!-- Scripts -->
   <!-- <script src="https://unpkg.com/grapesjs@0.21.8/dist/grapes.min.js"></script> -->
@@ -78,4 +77,6 @@
   
 
 </body>
+
+
 </html>
